replace java 9 with java 11 test since 9 is now EOL